fixing sun overflow

--- a/style.css
+++ b/style.css
@@ -403,7 +403,7 @@ img {
     position: relative;
     overflow: hidden;
     width: 100%;
-    height: 74%;
+    height: 73.8%;
 }
 .mountain {
     position: absolute;
